--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -2,4 +2,4 @@ Django==1.9
 python-social-auth>=0.2.19
 djangorestframework>=3.3.3
 tweepy==3.5.0
-git+https://github.com/ben-chin/auto-categorizer.git
+querystring_parser==1.2.3
