Webpack dev server HMR and babel for JS

--- a/provisioning/roles/common/tasks/main.yml
+++ b/provisioning/roles/common/tasks/main.yml
@@ -15,6 +15,7 @@
      - python2.7-dev
      - supervisor
      - vim
+     - curl
 
 - name: Make working directory
   file: path={{ working_dir }} state=directory
