Setup webpack-dev-server properly and add basic react app

--- a/provisioning/roles/web/defaults/main.yml
+++ b/provisioning/roles/web/defaults/main.yml
@@ -4,4 +4,5 @@ web_working_dir: '{{ working_dir }}/web'
 web_venv: '{{ web_working_dir }}/.env'
 web_log_dir: '{{ web_working_dir }}/log'
 web_activate_file: '{{ web_venv }}/bin/activate'
-supervisor_config: '/etc/supervisor/conf.d/web.conf'
+supervisor_web_config: '/etc/supervisor/conf.d/web.conf'
+supervisor_webpack_config: '/etc/supervisor/conf.d/webpack.conf'
