--- a/project/package.json
+++ b/project/package.json
@@ -13,6 +13,7 @@
     "babel-core": "^6.8.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "babel-polyfill": "^6.9.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "react": "^15.0.2",
@@ -22,10 +23,12 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "isomorphic-fetch": "^2.2.1",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0",
     "underscore": "^1.8.3"
   }
 }
