--- a/project/package.json
+++ b/project/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "isomorphic-fetch": "^2.2.1",
+    "pusher-js": "^3.1.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-redux": "^4.4.5",
