--- a/project/package.json
+++ b/project/package.json
@@ -23,6 +23,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "dateformat": "^1.0.12",
     "isomorphic-fetch": "^2.2.1",
     "pusher-js": "^3.1.0",
     "react": "^15.0.2",
